force-app/main/default/objects/Environment_Risk_Event__c.object
<CustomObject>
    <label>環境風險事件</label>
    <nameField>
        <label>裁處書字號</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>客戶</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>環境風險事件</relationshipLabel>
        <relationshipName>Environment_Risk_Event</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <label>公司名稱</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Penalty_Time__c</fullName>
        <label>裁處時間</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Account_Owner__c</fullName>
        <formula>Account__r.Owner.Employee_No__c</formula>
        <label>Account Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Penalty_Amount__c</fullName>
        <label>裁處金額</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Penalty_Reason__c</fullName>
        <label>裁處理由</label>
        <length>800</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Violation_Time__c</fullName>
        <label>違反時間</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Legal_Provision__c</fullName>
        <label>法規條款</label>
        <length>1600</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Environment_Risk_Event_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>環境風險事件外鍵</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Penalty_Time__c</columns>
        <columns>Violation_Time__c</columns>
        <columns>Penalty_Amount__c</columns>
        <columns>Company_Name__c</columns>
        <columns>Legal_Provision__c</columns>
        <columns>Penalty_Reason__c</columns>
        <columns>Account_Owner__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>